...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <mozilla.components.ui.autocomplete.InlineAutocompleteEditText
                    android:id="@+id/urlView"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/urlbar_hint"
                    android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
...
